--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -29,5 +29,20 @@
             </div>
         </div>
     </section>
-
-    
+    {{!-- How to Use Section --}}
+    <section id="usage" class="bg-gray-800">
+        <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+            <div class="font-light text-gray-400 sm:text-lg">
+                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-white">How to Use BrewReview</h2>
+                <p class="mb-4">{{!-- About Section --}}
+    <section id="about" class="bg-gray-800">
+        <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+            <div class="font-light text-gray-400 sm:text-lg">
+                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-white">How to Use BrewReview</h2>
+                <p class="mb-4">1. </p>
+                <p> 2. </p>
+                <p> 3. </p>
+                <p> 4. </p>
+            </div>
+        </div>
+    </section>
